--- a/public/index.html
+++ b/public/index.html
@@ -348,10 +348,10 @@ text-size-adjust:none;
         <div class="container">
             <div class="row" style="min-height: 400px;">
                 <div class="col-sm-6 col-md-8" style="valign: middle&#39;; ">
-                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Never settle for ordinary <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
+                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> No more ordinary purchases <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
                     <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;">
                      
-                    The only site that sends special questionnaire to each reviewer to cross-validate their claims.
+                    Revvora questions each reviewer to verify their claims to provide unmatched recommendations.
                     </h3>
                     <h3 class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:6px;">
                     
@@ -389,7 +389,7 @@ text-size-adjust:none;
         <div class="controls ">
             <p style="color: #000; font-size: 9px; text-align: center"></p>
             <input type="hidden" name="csrfmiddlewaretoken" value="pilbkKuqZAMQ8uQhfnjWpSo3L1q5xB8vaV8nDgEpHFKYEdktYBsJOXx7y9qGuB7y">
-            <input type="submit" class="submit form-control" id="id_submit" value="Suggest Now" dcvalue="Submit">
+            <input type="submit" class="submit form-control" id="id_submit" value="Suggest the Best" dcvalue="Submit">
         </div>
     </div>
 </form>
