--- a/public/index.html
+++ b/public/index.html
@@ -348,10 +348,10 @@ text-size-adjust:none;
         <div class="container">
             <div class="row" style="min-height: 400px;">
                 <div class="col-sm-6 col-md-8" style="valign: middle&#39;; ">
-                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> No more ordinary purchases <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
+                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Reviews backed by facts <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
                     <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;">
                      
-                    Revvora questions each reviewer to verify their claims to provide unmatched recommendations.
+                    The only site that sends custom questionnaire to each reviewer to cross-validate their claims.
                     </h3>
                     <h3 class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:6px;">
                     
