--- a/public/index.html
+++ b/public/index.html
@@ -348,7 +348,7 @@ text-size-adjust:none;
         <div class="container">
             <div class="row" style="min-height: 400px;">
                 <div class="col-sm-6 col-md-8" style="valign: middle&#39;; ">
-                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Reviews backed by facts <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
+                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Trusted recommendations <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
                     <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;">
                      
                     The only site that sends custom questionnaire to each reviewer to cross-validate their claims.
