--- a/public/index.html
+++ b/public/index.html
@@ -168,13 +168,19 @@ text-size-adjust:none;
                 .mob-banner {
                   display: none;
                 }
+                .desktop {
+                display: inline-block;
+               }
+               .mob-only {
+                display: none;
+               }
             }
            @media (min-width: 1025px){
               .mob-banner {
                   display: none;
                 }
                .desktop {
-                display: inline;
+                display: inline-block;
                }
                .mob-only {
                 display: none;
@@ -500,7 +506,7 @@ text-size-adjust:none;
             <div class="row">
     
     <div class="row recent-projects" style="margin-top: 0px;margin-right: 16px;margin-left: 16px;">
-    <h2 class="classic-title"><span style="padding-bottom: 12px;font-size: 20px">How it works</span></h2>
+
 
     
     <div class="img-table">
