--- a/public/index.html
+++ b/public/index.html
@@ -532,7 +532,7 @@ text-size-adjust:none;
             <img class="img-banner" src="./img/criteria.png" style="width:300px" />
         </div>
         <div class="img-div">
-            <div><span>When it comes to finding the right local service, the community knows what to look and how to get the best bargain.
+            <div><span>When it comes to finding the right service, your local community knows what to look for.
                 <br><br>That's why zaphow powers your search using popular criteria to provide trusted recommendations that suit your needs.</span></div>
         </div>
     </div>
