--- a/public/index.html
+++ b/public/index.html
@@ -516,7 +516,7 @@ text-size-adjust:none;
                 <img class="avatar" src="./sc/boy.png" /><p class="from-them chat">It was postive. Finally landed the job i was looking for.</p>
                 <p class="from-me chat">When did you avail JobTree service? (dd-mm-yy)</p>
                 <img class="avatar" src="./sc/boy.png" /><p class="from-them chat">31-05-19</p>
-                <p class="from-me chat">Pls share screenshot of receipt/email as proof to complete your feedback</p>
+                <p class="from-me chat">Pls share a screenshot of receipt to validate your review</p>
                 <img class="avatar" src="./sc/boy.png" /><p class="from-them chat"> ✅ File uploaded & verified
                 <p class="from-me chat">Thanks for the feedback 👍</p>
             </div>
@@ -531,7 +531,7 @@ text-size-adjust:none;
         </div>
         <div class="img-div">
             <div><span>When it comes to finding the right service, your local community knows what to look for.
-                <br><br>That's why zaphow powers your search using popular criteria to provide trusted recommendations that suit your needs.</span></div>
+                <br><br>That's why zaphow offers popular criteria to filter trusted recommendations to suit your needs.</span></div>
         </div>
     </div>
     
