--- a/public/index.html
+++ b/public/index.html
@@ -516,7 +516,7 @@ text-size-adjust:none;
                 <img class="avatar" src="./sc/boy.png" /><p class="from-them chat">It was postive. Finally landed the job i was looking for.</p>
                 <p class="from-me chat">When did you avail JobTree service? (dd-mm-yy)</p>
                 <img class="avatar" src="./sc/boy.png" /><p class="from-them chat">31-05-19</p>
-                <p class="from-me chat">Pls share a screenshot of receipt to validate your review</p>
+                <p class="from-me chat">Pls share a screenshot of your receipt to validate the review</p>
                 <img class="avatar" src="./sc/boy.png" /><p class="from-them chat"> ✅ File uploaded & verified
                 <p class="from-me chat">Thanks for the feedback 👍</p>
             </div>
