--- a/public/search.html
+++ b/public/search.html
@@ -469,7 +469,7 @@ text-size-adjust:none;
         <div class="img-div">
            <br>
             <br>
-            <div style="line-height: 22px;">Tap the criteria you wish to select:</div>
+            <div style="line-height: 22px;">Tap the criteria for your ideal caterer:</div>
 
             <div class="conv">
                 <div id="c1" class="circular" onclick="setCriteria('#fe4c4c', '#fe8473', 'c1')"><span>Timely delivery</span></div>
