--- a/public/search.html
+++ b/public/search.html
@@ -468,13 +468,20 @@ text-size-adjust:none;
     <div class="img-table">
         <div class="img-div">
            <br>
-            <br>
-            <div style="line-height: 22px;">Tap the criteria for your ideal caterer:</div>
+            <div style="line-height: 22px;margin-top: 10px;">Tap the criteria for your ideal caterer:</div>
 
             <div class="conv">
                 <div id="c1" class="circular" onclick="setCriteria('#fe4c4c', '#fe8473', 'c1')"><span>Timely delivery</span></div>
                 <div id="c2" class="circular" onclick="setCriteria('#ec3e91', '#fb64a3', 'c2')" style="position: absolute;top: 200px;margin-left: 99px;width: 96px;border-radius: 96px;font-size: 16px;"><span>Serves in my locality</span></div>
                 <div id="c3" class="circular" onclick="setCriteria('#f7b424', '#fed85c', 'c3')" style="position: absolute;top: 156px;margin-left: 186px;width: 70px;border-radius: 100px;font-size: 12px;height: 70px;"><span style="top:17px;">Value for money</span></div>
+                <div id="c4" class="circular" onclick="setCriteria('#c864fb', '#e0a4ff', 'c4')" style="position: absolute;top: 142px;margin-left: 99px;width: 54px;border-radius: 100px;font-size: 12px;height: 54px;"><span style="top:17px;">Bengali</span></div>
+                <div id="c5" class="circular" onclick="setCriteria('#5086c8', '#a4cdff', 'c5')" style="position: absolute;top: 235px;margin-left: 201px;width: 71px;border-radius: 100px;font-size: 12px;height: 70px;"><span style="top:17px;">Serves Non-veg</span></div>
+                <div id="c6" class="circular" onclick="setCriteria('#49b49b', '#a4f7e4', 'c6')" style="position: absolute;top: 269px;margin-left: 5px;width: 90px;border-radius: 100px;font-size: 15px;height: 90px;"><span style="top:24px;">Authentic taste</span></div>
+                <div id="c7" class="circular" onclick="setCriteria('#fe4c4c', '#fe8473', 'c7')" style="position: absolute;top: 304px;margin-left: 105px;width: 70px;border-radius: 100px;font-size: 12px;height: 70px;"><span style="top:15px;">South Indian</span></div>
+
+                <div id="c8" class="circular" onclick="setCriteria('#ec3e91', '#fb64a3', 'c8')" style="position: absolute;top: 313px;margin-left: 184px;width: 70px;border-radius: 100px;font-size: 12px;height: 70px;"><span style="top:17px;">North Indian</span></div>
+                <div id="c9" class="circular" onclick="setCriteria('#f7b424', '#fed85c', 'c9')" style="position: absolute;top: 365px;margin-left: 48px;width: 70px;border-radius: 100px;font-size: 12px;height: 70px;"><span style="top:23px;">Pure veg</span></div>
+                <div id="c10" class="circular" onclick="setCriteria('#c864fb', '#e0a4ff', 'c10')" style="position: absolute;top: 381px;margin-left: 133px;width: 68px;border-radius: 100px;font-size: 12px;height: 70px;"><span style="top:17px;">Snack menu</span></div>
             </div>
         </div>
 
@@ -530,8 +537,8 @@ text-size-adjust:none;
     </div>
 </div>
 
-<div style="padding:21px;">
-    <input type="submit" class="submit form-control" id="id_submit" value="Browse results" dcvalue="Browse results">
+<div style="padding:21px;bottom: 60px;position: fixed;width: 100%;">
+    <input type="submit" class="submit form-control" id="id_submit" value="Search" dcvalue="Browse results">
 </div>
 
 <div class="clear"></div>
