--- a/public/search.html
+++ b/public/search.html
@@ -388,6 +388,7 @@ text-size-adjust:none;
                 border-radius: 117px;
                 height: 96px;
                 text-align: center;
+                font-weight: bold;
             }
             .circular span {
                 color: #000;
@@ -465,7 +466,7 @@ text-size-adjust:none;
 
 
     
-    <div class="img-table">
+    <div class="img-table" style="margin-left: 12px;">
         <div class="img-div">
            <br>
             <div style="line-height: 22px;margin-top: 10px;">Tap the criteria for your ideal caterer:</div>
