--- a/public/search.html
+++ b/public/search.html
@@ -11,8 +11,9 @@
 
 @media (max-width: 599px){
 .logo {
-  margin-top: 15px;
-  width: 24px
+    margin-top: 6px;
+    width: 36px;
+    margin-left: 3px;
 }
 }
 
@@ -422,7 +423,7 @@ text-size-adjust:none;
             </button>
             <!-- End Toggle Nav Link For Mobiles -->
             <a class="navbar-brand " href="http://www.scoosh.in" style="height: 40px;">
-                <img alt="zaphow.com" class="logo" src="./img/logozz.png" >
+                <img alt="zaphow.com" class="logo" src="./img/logoll.png" >
             </a>
         </div>
         <div class="navbar-collapse collapse">
@@ -515,7 +516,7 @@ text-size-adjust:none;
 
 
 
-                        <input type="text" style="border: 1px solid;font-size: 16px;height: 40px;margin-left: 37px;width: calc(100% - 38px);z-index: 9999;margin-top:-15px" id="q" name="q" placeholder="" class="form-control" value="caterers in bangalore" dcvalue="caterers in bangalore" autocomplete="off" required="required">
+                        <input type="text" style="border: 1px solid;font-size: 16px;height: 40px;margin-left: 53px;width: calc(100% - 56px);z-index: 9999;margin-top:-15px;" id="q" name="q" placeholder="" class="form-control" value="caterers in bangalore" dcvalue="caterers in bangalore" autocomplete="off" required="required">
 
 
 
