--- a/public/index.html
+++ b/public/index.html
@@ -446,7 +446,7 @@ text-size-adjust:none;
                     <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Trusted local recommendations <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
                     <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;">
                      
-                    Localista ranks suppliers based on <span style="font-weight:bold;color:#000">5-step verified</span> customer interactions.
+                    localista ranks local services based on <span style="font-weight:bold;color:#000">5-step verified</span> customer interactions.
                     </h3>
                     <h3 class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:6px;">
                     
