--- a/public/index.html
+++ b/public/index.html
@@ -509,18 +509,18 @@ text-size-adjust:none;
     
     <div class="img-table">
         <div class="img-div">
-           <br> <div><span class="img-title">Verified customer interactions</span></div>
-            <br><div style="line-height: 22px;">Unlike reviews which can be influenced, localista collects direct feedback using 5-step evidence-based questionnaire.</div>
+           <br> <div><span class="img-title">Verified customer stories</span></div>
+            <br><div style="line-height: 22px;">Online reviews can't fool us anymore. localista's <span style="font-weight:bold;color:#000">verified stories</span> tell you exactly what customers think after they have <span style="font-weight:bold;color:#000">actually</span> used the service.</div>
             <div class="conv">
                 <p class="from-me chat">Hi, how was your experience with JobTree consultants?</p>
-                <img class="avatar" src="./sc/boy.png" /><p class="from-them chat">It was postive. Finally landed the job i was looking for.</p>
+                <img class="avatar" src="./sc/boy.png" /><p class="from-them chat">It was great 👍. Finally landed the job i was looking for.</p>
                 <p class="from-me chat">When did you avail JobTree service? (dd-mm-yy)</p>
                 <img class="avatar" src="./sc/boy.png" /><p class="from-them chat">31-05-19</p>
                 <p class="from-me chat">Pls share a screenshot of your receipt to validate the review</p>
                 <img class="avatar" src="./sc/boy.png" /><p class="from-them chat"> ✅ File uploaded & verified
-                <p class="from-me chat">Thanks for the feedback 👍</p>
+                <p class="from-me chat">Who was your point of contact ar Jobtree?</p>
             </div>
-            <div style="margin-top: 30px">This way you get unbiased, authentic local recommendations.</div>
+            <div style="margin-top: 30px">This way you get truly unbiased & authentic recommendations.</div>
         </div>
 
     </div>
@@ -570,7 +570,7 @@ text-size-adjust:none;
                         <div id="div_id_submit" class="form-group">
                             <div class="controls ">
                                 <p style="color: #000; font-size: 9px; text-align: center"></p>
-                                <input type="submit" class="submit form-control" id="id_submit" value="Find trusted providers" dcvalue="Find trusted providers">
+                                <input type="submit" class="submit form-control" id="id_submit" value="Get recommendations" dcvalue="Find trusted providers">
                             </div>
                         </div>
                     </form>
