--- a/public/index.html
+++ b/public/index.html
@@ -526,12 +526,12 @@ text-size-adjust:none;
     </div>
     <div class="img-table">
         <div class="img-div" style="margin-top:-24px;">
-            <div><span class="img-title">Search by popular criteria</span></div>
+            <div><span class="img-title">Get the most out of localista</span></div>
             <img class="img-banner" src="./img/criteria.png" style="width:300px" />
         </div>
         <div class="img-div">
-            <div><span>When it comes to finding the right service, your local community knows what to look for.
-                <br><br>That's why localista offers popular criteria to filter trusted recommendations to suit your needs.</span></div>
+            <div><span>Be it to find a trusted insurance policy that customers have actually claimed with, or to find a trusted doctor, localista is at your disposal.
+                <br><br>Never settle for ordinary again!</span></div>
         </div>
     </div>
     
