--- a/public/index.html
+++ b/public/index.html
@@ -530,7 +530,7 @@ text-size-adjust:none;
             <img class="img-banner" src="./img/criteria.png" style="width:300px" />
         </div>
         <div class="img-div">
-            <div><span>Be it to find a trusted insurance policy that customers have actually claimed with, or to find a trusted doctor, localista is at your disposal.
+            <div><span>Be it to find a trusted insurance policy that customers have actually claimed with or to find a trusted doctor, localista is at your disposal.
                 <br><br>Never settle for ordinary again!</span></div>
         </div>
     </div>
