--- a/public/search.html
+++ b/public/search.html
@@ -26,6 +26,9 @@ html{
     background-color: #ffffff;
     font-family: quicksand;
 }
+.results {
+    margin-top: 16px;
+}
 #q {
     font-size: 18px;
     height: 40px;
@@ -1513,6 +1516,49 @@ p img.right { float: right; margin-left: 1em; }
 </head>
 <body>
 
+<div class="logo"><img src="../img/logoll.png" />
+    <input type="text" id="q" name="q" placeholder="" class="form-control" value="best caterers in bangalore" dcvalue="" autocomplete="off" required="required"/>
+    <div class="tag-wrapper">
+        <div class="heading">Popular criteria:</div>
+        <div class="tag-c">
+            <div class="tag">
+                <input type="checkbox" />
+                <label for="">North Indian</label>
+                <i class="fa fa-plus"></i>
+                <i class="fa fa-check"></i>
+            </div>
+
+            <div class="tag">
+                <input type="checkbox" />
+                <label for="">Variety</label>
+                <i class="fa fa-plus"></i>
+                <i class="fa fa-check"></i>
+            </div>
+
+            <div class="tag">
+                <input type="checkbox" />
+                <label for="">Non-veg</label>
+                <i class="fa fa-plus"></i>
+                <i class="fa fa-check"></i>
+            </div>
+
+            <div class="tag">
+                <input type="checkbox" />
+                <label for="">Veg</label>
+                <i class="fa fa-plus"></i>
+                <i class="fa fa-check"></i>
+            </div>
+
+            <div class="tag">
+                <input type="checkbox" />
+                <label for="">Available near me</label>
+                <i class="fa fa-plus"></i>
+                <i class="fa fa-check"></i>
+
+            </div>
+        </div>
+
+    </div>
 <!-- Full Body Container -->
 <div id="containerWiz">
 
