--- a/public/search.html
+++ b/public/search.html
@@ -26,6 +26,19 @@ html{
     background-color: #ffffff;
     font-family: quicksand;
 }
+.result-headline {
+    display: table-cell;
+    vertical-align: middle;
+    padding-left: 14px;
+    width: 90%;
+}
+.result-c img {
+    display: table-cell;
+    width: 32px !important;
+}
+.result-c {
+    display: table;
+}
 .loading {
     margin: 0 auto;
     left: 0;
