--- a/public/search.html
+++ b/public/search.html
@@ -26,6 +26,74 @@ html{
     background-color: #ffffff;
     font-family: quicksand;
 }
+.spec-c{
+    margin-top: 8px;
+}
+.icon-c {
+    display: table;
+}
+.icon-c img {
+    display: table-cell;
+    vertical-align: middle;
+    width: 20px !important;
+    margin-left: 0px !important;
+    margin-right: 8px;
+}
+.icon-c .icon-title {
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 10px;
+}
+.detail-section .address {
+    color: #c1c1c1;
+    font-size: 12px;
+    margin-top: 5px;
+}
+.thumbnail-section {
+    display: table-cell;
+}
+.detail-section {
+    display: table-cell;
+    vertical-align: middle;
+    padding-left: 10px;
+    font-size: 14px;
+    font-weight: bold;
+}
+.thumbnail-section img {
+    width: 72px !important;
+    margin-top: 14px !important;
+    border: 2px solid #17b9ff;
+    border-radius: 9px;
+}
+.card-c .detail {
+    min-height: 100px;
+    display: table;
+}
+.card-c hr {
+    margin: 0 auto;
+    width: 90%;
+    border: none;
+    height: 1px;
+    border-bottom: 1px solid #e4eff9;
+}
+.card {
+    -webkit-box-shadow: 0px 0px 17px 0px rgba(0,0,0,0.13);
+    -moz-box-shadow: 0px 0px 17px 0px rgba(0,0,0,0.13);
+    box-shadow: 0px 0px 17px 0px rgba(0,0,0,0.13);
+    margin: 10px;
+    min-height: 270px;
+}
+.card-c {
+    min-height: 233px;
+}
+.card-d {
+    min-height: 69px;
+    width: 100%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(201, 230, 255, 0.2) 100%);
+    z-index: 99999;
+    position: relative;
+    bottom: 0px;
+}
 .result-headline {
     display: table-cell;
     vertical-align: middle;
@@ -86,7 +154,7 @@ html{
     min-height: 19px;
     width: 100%;
     margin-top: -23px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(235, 245, 254) 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(201, 229, 255) 100%);
     z-index: 99999;
     position: absolute;
 }
