--- a/public/search.html
+++ b/public/search.html
@@ -26,6 +26,66 @@ html{
     background-color: #ffffff;
     font-family: quicksand;
 }
+.ctabtn {
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 200px;
+    padding: 16px;
+    border-radius: 10px;
+    background: linear-gradient(180deg, #87cdfa 0%, #5c9de5 80%, #5c9de5 100%);
+    z-index: 9999;
+    top: -26px;
+    position: relative;
+    z-index: 99999;
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+}
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul li{
+  display:inline-block;
+  clear: both;
+  padding: 20px;
+  border-radius: 30px;
+  margin-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.me{
+    background: transparent;
+    color: #000;
+    border-bottom-left-radius: 5px;
+    display: block;
+    margin-bottom: 18px;
+    border: 1px solid #19b6b7;
+    //#089fff
+}
+.stories {
+    padding-top: 54px;
+    width: 196px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    position: absolute;
+    height: 160px;
+    overflow-y: hidden;
+}
+.story-title {
+    font-size: 14px;
+    font-weight: bold;
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 270px;
+    margin-top: 16px;
+}
 .spec-c{
     margin-top: 8px;
 }
@@ -87,12 +147,12 @@ html{
     min-height: 233px;
 }
 .card-d {
-    min-height: 69px;
+    height: 102px;
     width: 100%;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(201, 230, 255, 0.2) 100%);
+    background: linear-gradient(180deg, rgba(254, 255, 255, 0) 0%, rgb(255, 255, 255) 25%, rgb(237, 244, 254) 100%);
     z-index: 99999;
     position: relative;
-    bottom: 0px;
+    bottom: -50px;
 }
 .result-headline {
     display: table-cell;
@@ -1605,7 +1665,7 @@ p img.right { float: right; margin-left: 1em; }
 
 </style>
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css"/>
-    
+
     
 </head>
 <body>
