--- a/public/search.html
+++ b/public/search.html
@@ -51,24 +51,55 @@ ul{
 ul li{
   display:inline-block;
   clear: both;
-  padding: 20px;
+  padding: 23px;
   border-radius: 30px;
   margin-bottom: 2px;
   font-family: Helvetica, Arial, sans-serif;
 }
 
+.avatar {
+    width: 42px;
+    height: 42px;
+    background-position: center;
+    border-radius: 40px;
+    display: table-cell;
+    vertical-align: middle;
+    background: url((unknown));
+    background-size: contain;
+    border: 2px solid #08adff7d;
+}
+.stitle {
+    display: table-cell;
+    vertical-align: middle;
+    padding-left: 16px;
+}
+.emoji {
+    width: 24px !important;
+    height: 24px;
+}
+.parent {
+    position: absolute;
+    right: 30px;
+    margin-top: -49px;
+    width: 100px;
+    height: 100px;
+    display: none;
+}
+
 .me{
-    background: transparent;
+   background: linear-gradient(180deg, #f5f5f5 0%, #f9f9f9 50%, #f3f3f3 100%);
     color: #000;
     border-bottom-left-radius: 5px;
-    display: block;
+    display: table;
     margin-bottom: 18px;
-    border: 1px solid #19b6b7;
-    //#089fff
+    //#089fff: ;
+    font-family: quicksand;
+    font-size: 16px;
+    width: 100%;
 }
 .stories {
     padding-top: 54px;
-    width: 196px;
+    width: 292px;
     margin: 0 auto;
     left: 0;
     right: 0;
@@ -1684,7 +1715,7 @@ p img.right { float: right; margin-left: 1em; }
 
             <div class="tag">
                 <input type="checkbox" />
-                <label for="">Variety</label>
+                <label for="">Variety Menu</label>
                 <i class="fa fa-plus"></i>
                 <i class="fa fa-check"></i>
             </div>
@@ -1878,9 +1909,95 @@ function setCriteria(color1, color2, elem){
     }
 }
 
+function showReactions() {
+    for(var i=0; i<2; i++) {
+        startReactions('reaction'+i);
+        $('.parent').show();
+    }
+    setTimeout("hideReactions()",4000);
+}
+
+function hideReactions() {
+    for(var i=0; i<2; i++) {
+        startReactions('reaction'+i);
+        $('.parent').fadeOut(1000);
+    }
+}
+
+function startReactions(elem) {
+    // shim layer with setTimeout fallback
+    window.requestAnimationFrame = (function(){
+    return  window.requestAnimationFrame       ||
+            window.webkitRequestAnimationFrame ||
+            window.mozRequestAnimationFrame    ||
+            function( callback ){
+              window.setTimeout(callback, 1000 / 60);
+            };
+    })();
+
+    var $parent= $('#'+elem),
+    $elements= $('img', $parent),
+    vertSpeed= 2,
+    horiSpeed= 2;
+
+    var height=$parent.height(),
+        width=$parent.width();
+
+    // store all the data for animation
+    var items= [];
+    for(var i=0; i<$elements.length; i++){
+        var $element= $($elements[i]),
+        elementWidth= $element.width(),
+        elementHeight= $element.height();
+
+        $element.css("position", "absolute");
+
+        var item= {
+            element: $element[0],
+            elementHeight: elementHeight,
+            elementWidth: elementWidth,
+            ySpeed: -vertSpeed,
+
+            omega: 2*Math.PI* horiSpeed/(width*60), //omega= 2Pi*frequency
+            random: (Math.random()/2+0.5) * i * 10000, //random time offset
+            x: function(time){
+                return (Math.sin(this.omega *(time+this.random)) + 1)/2 * (width-elementWidth);
+            },
+            y: height + (Math.random()+1)*i*elementHeight,
+        }
+        items.push(item);
+    }
+
+    var counter=0;
+    var animationStep= function(){ //called 60 times a second
+      var time=+new Date(); //little trick, gives unix time in ms
+      var check= (counter%10 === 0);
+
+      for(var i=0; i<items.length; i++){
+        var item= items[i];
+
+        transformString= "translate3d("+item.x(time)+"px,"+item.y+"px,0px)";
+        item.element.style.transform= transformString;
+        item.element.style.webkitTransform= transformString;
+
+        item.y += item.ySpeed;
+        if(check && item.y < -item.elementHeight){ //check bounds every 10th iteration
+            item.y= height;
+        }
+      }
+
+      counter%=10;
+      counter++;
+      requestAnimationFrame(animationStep);
+    }
+
+    requestAnimationFrame(animationStep);
+}
+
 </script>
 
-
+<script src="./sc/jquery.min.js"></script>
+<script src="./sc/jquery-ui.min.js"></script>
 <script src="./wiz.bundle.min.js"></script>
 
 </body></html>
