--- a/public/search.html
+++ b/public/search.html
@@ -26,6 +26,19 @@ html{
     background-color: #ffffff;
     font-family: quicksand;
 }
+.grey-rbox {
+    position: relative;
+    left: 4px;
+    font-size: 12px;
+    top: -2px;
+    background: #8e8e8e;
+    color: #fff;
+    padding: 4px;
+    padding-left: 8px;
+    padding-right: 10px;
+    border-radius: 6px;
+    font-weight: bold;
+}
 .ctabtn {
     margin: 0 auto;
     left: 0;
@@ -292,6 +305,9 @@ p {
     text-align: center;
     border-radius: 5px;
 }
+.tag-wrapper.left{
+    margin-top: 16px;
+}
 .tag-wrapper .heading {
     left: 0px;
     font-weight: bold;
@@ -300,6 +316,13 @@ p {
     margin-left: 16px;
     margin-top: 8px;
     text-align: left;
+}
+.topic.tag.rounded label {
+    border-radius: 6px;
+    font-size: 14px;
+    padding-right: 16px;
+    padding: 10px;
+    background: linear-gradient(180deg, #9fe558 0%, #67c200 100%);
 }
 .tag {
   display: inline-block;
@@ -1701,7 +1724,7 @@ p img.right { float: right; margin-left: 1em; }
 </head>
 <body>
 
-<div class="logo"><img src="../img/logoll.png" />
+<div class="logo"><img src="../img/logoff.png" />
     <input type="text" id="q" name="q" placeholder="" class="form-control" value="best caterers in bangalore" dcvalue="" autocomplete="off" required="required"/>
     <div class="tag-wrapper">
         <div class="heading">Popular criteria:</div>
