--- a/public/index.html
+++ b/public/index.html
@@ -555,7 +555,7 @@ text-size-adjust:none;
             <div class="img-div">
                 <div><span class="img-title">5-Step Verification Process</span></div>
                 <br>
-                <div>Every feedback submitted on famimum has to go through the rigorous verification process.</div>
+                <div>Every feedback submitted on famium has to go through the rigorous verification process.</div>
                 <br>
                 <ul class="veristeps" >
                     <li><span>Mobile number & name cross-verified</span></li>
