--- a/public/index.html
+++ b/public/index.html
@@ -438,7 +438,7 @@ text-size-adjust:none;
             </button>
             <!-- End Toggle Nav Link For Mobiles -->
             <a class="navbar-brand " href="http://www.scoosh.in" style="height: 40px;">
-                <img alt="zaphow.com" class="logo" src="./img/logof.png" >
+                <img alt="zaphow.com" class="logo" src="./img/logofa.png" >
             </a>
         </div>
         <div class="navbar-collapse collapse">
