--- a/public/index.html
+++ b/public/index.html
@@ -438,7 +438,7 @@ text-size-adjust:none;
             </button>
             <!-- End Toggle Nav Link For Mobiles -->
             <a class="navbar-brand " href="http://www.scoosh.in" style="height: 40px;">
-                <img alt="zaphow.com" class="logo" src="./img/logofa.png" >
+                <img alt="zaphow.com" class="logo" src="./img/logot.png" >
             </a>
         </div>
         <div class="navbar-collapse collapse">
@@ -475,7 +475,7 @@ text-size-adjust:none;
         <div class="container">
             <div class="row" style="min-height: 400px;">
                 <div class="col-sm-6 col-md-8" style="valign: middle&#39;; ">
-                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Discover services vouched by real users <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
+                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Trusted local recommendations<span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
                     <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;">
 
                         famium ranks services based on <span style="font-weight:bold;color:#000">5-step verification</span> of customer satisfaction.
