--- a/public/search.html
+++ b/public/search.html
@@ -44,8 +44,8 @@ html{
     left: 0;
     right: 0;
     width: 200px;
-    padding: 16px;
-    border-radius: 10px;
+    padding: 12px;
+    border-radius: 6px;
     background: linear-gradient(180deg, #87cdfa 0%, #5c9de5 80%, #5c9de5 100%);
     z-index: 9999;
     top: -26px;
@@ -54,6 +54,13 @@ html{
     color: #fff;
     text-align: center;
     font-weight: bold;
+}
+.ctabtn.top {
+    margin-top: -45px;
+    margin-bottom: 11px;
+    background: transparent;
+    color: #4478b1;
+    border: 1px solid #76baf2;
 }
 ul{
   list-style: none;
@@ -321,8 +328,34 @@ p {
     border-radius: 6px;
     font-size: 14px;
     padding-right: 16px;
-    padding: 10px;
-    background: linear-gradient(180deg, #9fe558 0%, #67c200 100%);
+    border: 1px solid #9fe558;
+    background: transparent;
+    color: #000;
+}
+.topic.tag.rounded label.score80 {
+    font-size: 28px;
+}
+.topic.tag.rounded label.score70 {
+    font-size: 24px;
+}
+.topic.tag.rounded label.score60 {
+    font-size: 20px;
+    border: 1px solid #ecdd16;
+}
+.topic.tag.rounded label.score50 {
+    border: 1px solid #ecdd16;
+}
+.topic.tag.rounded label.score40 {
+    font-size: 16px;
+    border: 1px solid #ecdd16;
+}
+.topic.tag.rounded label.score30 {
+    font-size: 14px;
+    border: 1px solid #f7b99a;
+}
+.topic.tag.rounded label.score20 {
+    font-size: 12px;
+    border: 1px solid #f7b99a;
 }
 .tag {
   display: inline-block;
@@ -1724,7 +1757,7 @@ p img.right { float: right; margin-left: 1em; }
 </head>
 <body>
 
-<div class="logo"><img src="../img/logoff.png" />
+<div class="logo"><img src="../img/logott.png" />
     <input type="text" id="q" name="q" placeholder="" class="form-control" value="best caterers in bangalore" dcvalue="" autocomplete="off" required="required"/>
     <div class="tag-wrapper">
         <div class="heading">Popular criteria:</div>
